# server/schemas/__init__.py
@@ -17,6 +17,7 @@ from .assets import (
     ReorderMarkdownSiblingsRequest,
     TutorSessionModel,
     UiStateModel,
+    UpdateDisabledContentItemsRequest,
     UpdateMarkdownNodeAliasRequest,
     UpdateSelectionRequest,
     UpdateUiStateRequest,
@@ -81,6 +82,7 @@ __all__ = [
     "TutorWorkflowRequest",
     "AppConfigModel",
     "UiStateModel",
+    "UpdateDisabledContentItemsRequest",
     "UpdateAppConfigRequest",
     "UpdateMarkdownNodeAliasRequest",
     "UpdateSelectionRequest",
